--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ mtgscan==1.0.8
 mtgtools==0.9.71
 numpy==1.26.4
 packaging==24.2
+pandas==2.2.3
 persistent==6.1.1
 pillow==11.1.0
 psutil==5.9.8
@@ -21,10 +22,12 @@ pycparser==2.22
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
 six==1.17.0
 symspellpy==6.7.8
 transaction==5.0
+tzdata==2025.1
 urllib3==2.3.0
 zc.lockfile==3.0.post1
 ZConfig==4.2
