--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+azure-core==1.32.0
+azure-identity==1.20.0
 BTrees==6.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 contourpy==1.3.1
+cryptography==44.0.2
 cycler==0.12.1
 dotenv==0.9.9
 editdistpy==0.1.5
@@ -10,15 +13,20 @@ fonttools==4.56.0
 idna==3.10
 kiwisolver==1.4.8
 matplotlib==3.10.1
+msal==1.31.1
+msal-extensions==1.2.0
 mtgscan==1.0.8
 mtgtools==0.9.71
 numpy==1.26.4
+opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 persistent==6.1.1
 pillow==11.1.0
+portalocker==2.10.1
 psutil==5.9.8
 pycparser==2.22
+PyJWT==2.10.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -27,6 +35,7 @@ requests==2.32.3
 six==1.17.0
 symspellpy==6.7.8
 transaction==5.0
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 zc.lockfile==3.0.post1
