--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,34 @@
+altair==5.5.0
+attrs==25.3.0
 azure-core==1.32.0
 azure-identity==1.20.0
+blinker==1.9.0
 BTrees==6.1
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 contourpy==1.3.1
 cryptography==44.0.2
 cycler==0.12.1
 dotenv==0.9.9
 editdistpy==0.1.5
 fonttools==4.56.0
+gitdb==4.0.12
+GitPython==3.1.44
 idna==3.10
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.1
 msal==1.31.1
 msal-extensions==1.2.0
 mtgscan==1.0.8
 mtgtools==0.9.71
+narwhals==1.31.0
 numpy==1.26.4
 opencv-python==4.11.0.86
 packaging==24.2
@@ -24,16 +36,26 @@ pandas==2.2.3
 persistent==6.1.1
 pillow==11.1.0
 portalocker==2.10.1
+protobuf==5.29.4
 psutil==5.9.8
+pyarrow==19.0.1
 pycparser==2.22
+pydeck==0.9.1
 PyJWT==2.10.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.23.1
 six==1.17.0
+smmap==5.0.2
+streamlit==1.43.2
 symspellpy==6.7.8
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
 transaction==5.0
 typing_extensions==4.12.2
 tzdata==2025.1
