--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,11 @@ editdistpy==0.1.5
 fonttools==4.56.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+gspread==6.2.0
+gspread-dataframe==4.0.0
+httplib2==0.22.0
 idna==3.10
 Jinja2==3.1.6
 jsonschema==4.23.0
@@ -30,6 +35,8 @@ mtgscan==1.0.8
 mtgtools==0.9.71
 narwhals==1.31.0
 numpy==1.26.4
+oauth2client==4.1.3
+oauthlib==3.2.2
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
@@ -39,6 +46,8 @@ portalocker==2.10.1
 protobuf==5.29.4
 psutil==5.9.8
 pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydeck==0.9.1
 PyJWT==2.10.1
@@ -48,7 +57,9 @@ python-dotenv==1.0.1
 pytz==2025.1
 referencing==0.36.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 rpds-py==0.23.1
+rsa==4.9
 six==1.17.0
 smmap==5.0.2
 streamlit==1.43.2
