--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -20,4 +20,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add frontend.py
           git commit -m "Keep alive: timestamp update"
-          git push
+          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
