--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -2,7 +2,7 @@ name: Keep Streamlit App Alive
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  
+    - cron: '0 */12 * * *' 
   workflow_dispatch:  
 
 jobs:
@@ -17,6 +17,10 @@ jobs:
           sed -i '/# KEEP_ALIVE_TIMESTAMP/d' frontend.py
           echo "# KEEP_ALIVE_TIMESTAMP: $(date)" >> frontend.py
 
+      - name: Debug git remote URL
+        run: |
+          git remote -v  # See what remote is currently set to
+
       - name: Commit and push changes
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -24,6 +28,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+          git remote -v  # Confirm the URL is correct now
           git add frontend.py
           git commit -m "Keep alive: timestamp update" || echo "No changes to commit"
           git push origin HEAD:main
