--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -1,29 +1,34 @@
 name: Keep Streamlit App Alive
-
 on:
   schedule:
-    - cron: '0 */12 * * *'
+    - cron: '0 */12 * * *'   # every 12 hours
   workflow_dispatch:
+
+# Ensure the default GITHUB_TOKEN can write
+permissions:
+  contents: write        # push commits and branches
+  pull-requests: write   # open / update PRs
 
 jobs:
   keep_alive:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
 
-      - name: Update timestamp comment in frontend.py
+    steps:
+      - uses: actions/checkout@v4      # v4 is current LTS
+
+      - name: Update timestamp comment
         run: |
           sed -i '/# KEEP_ALIVE_TIMESTAMP/d' frontend.py
-          echo "# KEEP_ALIVE_TIMESTAMP: $(date)" >> frontend.py
+          echo "# KEEP_ALIVE_TIMESTAMP: $(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> frontend.py
 
-      - name: Commit and push changes
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
-          git add frontend.py
-          git commit -m "Keep alive: timestamp update" || echo "No changes to commit"
-          git push origin HEAD:main
+      - name: Commit & open / update PR
+        uses: peter-evans/create-pull-request@v7   #  ← upgrade fixes the remote-rm bug
+        with:
+          # leave out "token:" to use the built-in GITHUB_TOKEN
+          commit-message: "chore: keep-alive heartbeat $(date -u +'%Y-%m-%d %H:%M')"
+          title:        "Keep-alive heartbeat"
+          body:         "Automated timestamp update to keep the Streamlit app awake."
+          branch:       keep-alive                # head branch created/updated by the action
+          branch-suffix: short-commit-hash        # unique suffix so runs don’t clash
+          delete-branch: true                     # cleans up after merge
+          base:         main
