--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -1,34 +1,35 @@
 name: Keep Streamlit App Alive
 on:
   schedule:
-    - cron: '0 */12 * * *'   # every 12 hours
+    - cron: '0 */12 * * *'          
   workflow_dispatch:
 
-# Ensure the default GITHUB_TOKEN can write
-permissions:
-  contents: write        # push commits and branches
-  pull-requests: write   # open / update PRs
+permissions:                        
+  contents: write
 
 jobs:
   keep_alive:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4      # v4 is current LTS
+      - uses: actions/checkout@v4    
 
       - name: Update timestamp comment
         run: |
           sed -i '/# KEEP_ALIVE_TIMESTAMP/d' frontend.py
           echo "# KEEP_ALIVE_TIMESTAMP: $(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> frontend.py
 
-      - name: Commit & open / update PR
-        uses: peter-evans/create-pull-request@v7   #  ← upgrade fixes the remote-rm bug
-        with:
-          # leave out "token:" to use the built-in GITHUB_TOKEN
-          commit-message: "chore: keep-alive heartbeat $(date -u +'%Y-%m-%d %H:%M')"
-          title:        "Keep-alive heartbeat"
-          body:         "Automated timestamp update to keep the Streamlit app awake."
-          branch:       keep-alive                # head branch created/updated by the action
-          branch-suffix: short-commit-hash        # unique suffix so runs don’t clash
-          delete-branch: true                     # cleans up after merge
-          base:         main
+      - name: Commit & push
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # stage the change (there will always be one – the new timestamp)
+          git add frontend.py
+
+          # if nothing changed, exit quietly so the job is green
+          git diff --cached --quiet && { echo "No changes"; exit 0; }
+
+          git commit -m "chore: keep-alive $(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+
+          # push straight to main
+          git push origin HEAD:main
